
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------
#1356038 by Nick_vh: Added More like this / Blocks Admin UI rework.
#1356018 by Nick_vh: Fixed Remove admin/system from solrconfig.xlm.
#1344690 by Nick_vh: Added Search page should be cloneable.
#1333904 by Nick_vh | vrc3: Added Please restore flexible 'results per page" option - follow up.
#1292364 by Nick_vh, scor: Added UI redesign.
#1336324 by Nick_vh | tinker: Added Get Solr version number to determine feature sets like facet ranges and location search.
#1347092 by Nick_vh | cfuller12: Fixed Solrsort appears to be broken in beta11.
#1344576 by Nick_vh: Fixed More like this should be environment dependent.
#1344570 by Nick_vh: Fixed When installing solr the 'visit the admin page" link is not working.

Apache Solr integration 7.x-1.0-beta11, 2011-11-16
------------------------------
#1328886 by drasgardian, Nick_vh, pwolanin: fix for access module fails for realm names with spaces.
#1340232 by milesw, Nick_vh: Added Did You Mean suggestions should be broken out from core search form.
#1343646 by Nick_vh: Fixed Empty Search behavior is not working.
#1301646 by Nick_vh: Fixed Coder Review + Drupal coding standard.
#1097976 by Nick_vh, jpmckinney: Fixed Use ShowFileRequestHandler, gettableFiles is deprecated.
#1342134 by Nick_vh: Fixed 'Creating default object from empty value" Notice in node access and indexing test.
#1341860 by pwolanin: Fixed Notice: Undefined index: fq in apachesolr_search_conditions_default() (line 401 of apachesolr_search().module).
#1053126 by jpmckinney, Nick_vh | pwolanin: Remove duplicate sort hooks in 7.x? follow-up.
#1053126 by jpmckinney, Nick_vh | pwolanin: Remove duplicate sort hooks in 7.x?.
#1341854 by pwolanin: Pass the query object into hooks altering search results.
#1340552 by pwolanin: Make facet generation more flexible/overrideable.
#1341840 by pwolanin: Fix for undefined index 'core_search' while running tests.