@@ -11,66 +11,82 @@ class DrupalSolrWebTestCase extends DrupalWebTestCase {
    * Implementation of setUp().
    */
   function setUp() {
+
     parent::setUp('apachesolr', 'apachesolr_search', 'search');
     // Load the default server.
     $env_id = apachesolr_default_environment();
     $environment = apachesolr_environment_load($env_id);
-    // We will use a core named after the simpletest prefix.
-    // Normal base URL will be http://localhost:8983/solr
-    $base_url = $environment['url'];
-    $environment['url'] .= '/' . $this->databasePrefix;
-    apachesolr_environment_save($environment);
-    $solr_url = $environment['url'];
-    $core_admin_url = "$base_url/admin/cores";
-    $filesdir = variable_get('file_public_path');
 
-    //create our 'solr core dir'
-    mkdir("$filesdir/solr", 0777, TRUE);
-    mkdir("$filesdir/solr/conf");
+    if (apachesolr_server_status($environment['url'])) {
+      // We will use a core named after the simpletest prefix.
+      // Normal base URL will be http://localhost:8983/solr
+      $base_url = $environment['url'];
+      $environment['url'] .= '/' . $this->databasePrefix;
+      apachesolr_environment_save($environment);
+      $solr_url = $environment['url'];
+      $core_admin_url = "$base_url/admin/cores";
+      $filesdir = variable_get('file_public_path');
 
-    // Our virtual solr core is located here
-    $instancedir = realpath("$filesdir/solr");
+      //create our 'solr core dir'
+      mkdir("$filesdir/solr", 0777, TRUE);
+      mkdir("$filesdir/solr/conf");
 
-    //copy all files in solr-conf dir to our virtual solr core
-    $pattern = dirname(__FILE__) . '/../solr-conf/*';
-    foreach (glob($pattern) as $conf_file) {
-      copy($conf_file, "$instancedir/conf/" . basename($conf_file));
+      // Our virtual solr core is located here
+      $instancedir = realpath("$filesdir/solr");
+
+      //copy all files in solr-conf dir to our virtual solr core
+      $pattern = dirname(__FILE__) . '/../solr-conf/*';
+      foreach (glob($pattern) as $conf_file) {
+        copy($conf_file, "$instancedir/conf/" . basename($conf_file));
+      }
+
+      $pattern = dirname(__FILE__) . '/conf/*';
+      foreach (glob($pattern) as $conf_file) {
+        copy($conf_file, "$instancedir/conf/" . basename($conf_file));
+      }
+
+      //copy(dirname(__FILE__) . '/../solr-conf/schema.xml', "$instancedir/conf/schema.xml");
+      $contents = file_get_contents(dirname(__FILE__) . '/../solr-conf/solrconfig.xml');
+
+      // Change the autoCommit time down to 1 second.
+      file_put_contents("$instancedir/conf/solrconfig.xml", preg_replace('@<maxTime>[0-9]+</maxTime>@', '<maxTime>1000</maxTime>', $contents));
+      $query['action'] = 'CREATE';
+      $query['name'] = $this->databasePrefix;
+      $query['instanceDir'] = $instancedir;
+      $this->drupalGet($core_admin_url, array('query' => $query));
+      $this->assertResponse(200);
+      $this->instancedir = $instancedir;
+      $this->solr_url = $solr_url;
+      $this->core_admin_url = $core_admin_url;
+      $this->checkCoreStatus();
     }
-
-    $pattern = dirname(__FILE__) . '/conf/*';
-    foreach (glob($pattern) as $conf_file) {
-      copy($conf_file, "$instancedir/conf/" . basename($conf_file));
+    else {
+      $this->error(t('The solr instance could not be found. Please enable a multicore one on http://localhost:8983/solr'));
     }
-
-    //copy(dirname(__FILE__) . '/../solr-conf/schema.xml', "$instancedir/conf/schema.xml");
-    $contents = file_get_contents(dirname(__FILE__) . '/../solr-conf/solrconfig.xml');
-
-    // Change the autoCommit time down to 1 second.
-    file_put_contents("$instancedir/conf/solrconfig.xml", preg_replace('@<maxTime>[0-9]+</maxTime>@', '<maxTime>1000</maxTime>', $contents));
-    $query['action'] = 'CREATE';
-    $query['name'] = $this->databasePrefix;
-    $query['instanceDir'] = $instancedir;
-    $this->drupalGet($core_admin_url, array('query' => $query));
-    $this->assertResponse(200);
-    $this->instancedir = $instancedir;
-    $this->solr_url = $solr_url;
-    $this->core_admin_url = $core_admin_url;
-    $this->checkCoreStatus();
   }
 
   /**
    * Helper function to invoke core admin actions.
    */
   protected function coreAdmin($action, $return_response = FALSE) {
-    $query = array();
-    $query['action'] = $action;
-    $query['wt'] = 'json';
-    $query['indent'] = '1';
-    $query['core'] = $this->databasePrefix;
-    $this->drupalGet($this->core_admin_url, array('query' => $query));
-    $this->assertResponse(200);
-    if ($return_response) {
-      return json_decode($this->drupalGetContent(), TRUE);
+    // Load the default server.
+    $env_id = apachesolr_default_environment();
+    $environment = apachesolr_environment_load($env_id);
+
+    if (apachesolr_server_status($environment['url'])) {
+      $query = array();
+      $query['action'] = $action;
+      $query['wt'] = 'json';
+      $query['indent'] = '1';
+      $query['core'] = $this->databasePrefix;
+      $this->drupalGet($this->core_admin_url, array('query' => $query));
+      $this->assertResponse(200);
+      if ($return_response) {
+        return json_decode($this->drupalGetContent(), TRUE);
+      }
+    }
+    else {
+      $this->error(t('The solr instance could not be found. Please enable a multicore one on http://localhost:8983/solr'));
     }
   }
 
@@ -102,13 +118,19 @@ class DrupalSolrMatchTestCase extends DrupalSolrWebTestCase {
    * Test search indexing.
    */
   function testMatching() {
-    $solr = apachesolr_get_solr();
-    $this->assertTrue($solr->ping(), "The Server could be Pinged");
-    $response = $solr->search("*:*", 0, 0, array('qt' => 'standard'));
-    $response = $response->response;
-    $this->assertEqual($response->numFound, 0, "There should not be any documents in the index");
-    //$this->_setup();
-    //$this->_testQueries();
+    // Load the default server.
+    $env_id = apachesolr_default_environment();
+    $environment = apachesolr_environment_load($env_id);
+    if (apachesolr_server_status($environment['url'])) {
+      $solr = apachesolr_get_solr($env_id);
+      $this->assertTrue($solr->ping(), "The Server could be Pinged");
+      $response = $solr->search("*:*", 0, 0, array('qt' => 'standard'));
+      $response = $response->response;
+      $this->assertEqual($response->numFound, 0, "There should not be any documents in the index");
+    }
+    else {
+      $this->error(t('The solr instance could not be found. Please enable a multicore one on http://localhost:8983/solr'));
+    }
   }
 
   /**
